beheer/includes/style/custom.css
body, html, .container-fluid{
	height: 100%;
}

body {
	background-color: #F1F1F1;
    overflow-x:hidden;
}
.main-sidebar {
	padding:0px;
}

.main-sidebar a {
	color:#555;
}

.main-content {
	background-color:#FFF;
	border-top:1px solid #E5E5E5;
	border-left:1px solid #E5E5E5;
	/*padding:5px 25px 0 25px; */
	min-height: 100%;
}

.arrow {
	display: none;
}

.main-sidebar .nav > li.active .arrow {
	display: block;
}

.bubble-arrow-border {
	border-color: transparent #E5E5E5 transparent transparent;
	border-style: solid;
	border-width: 10px;
	height:0;
	width:0;
	position:absolute;
	top: 10px;
	right: 0px;
}

.bubble-arrow {
	border-color: transparent #FFF transparent transparent;
	border-style: solid;
	border-width: 10px;
	height:0;
	width:0;
	position:absolute;
	top: 10px;
	right: -1px;
	z-index:2;

}

/* START JSON DYNAMIC TABLES */
table.table-json thead tr th[data-json-sort]:before{
  font-family:"Glyphicons Halflings";
  line-height:1;
  margin:0 10px 0 0;
  display:inline-block;
  font-size:10px;
}

table.table-json thead tr th[data-json-sort=asc]:before{
  content:"\e113";
}

table.table-json thead tr th[data-json-sort=desc]:before{
  content:"\e114";
}

table.table-json thead tr th[data-json-column] {
	cursor:pointer;
}
/* END JSON DYNAMIC TABLES */

#top-bar{
 min-height: 3em;
}
#top-bar > div{
    -webkit-box-shadow: inset 0px 0px 2px 0px rgba(50, 50, 50, 0.2);
    -moz-box-shadow:    inset 0px 0px 2px 0px rgba(50, 50, 50, 0.2);
    box-shadow:         inset 0px 0px 2px 0px rgba(50, 50, 50, 0.2);
}

#site_logo_setting{
	max-width:300px;
	max-height:300px;
}

.offcanvas{
    position:relative;
    left:0;

}

.nav.dropcart{
    margin-top:3em;
}

.nav .static{
    display: block;
    padding: 10px 15px;
}

.nav .faded{
    color: #676767;
}

.nav .title{
    font-weight:bold;
    font-size:1.3em;
    background: #e5e5e5;
}

.block-trigger,
.block-trigger:active,
.block-trigger:hover,
.block-trigger:focus
{
    display:block;
    padding:1em 2em;
    text-align: center;
    color: #3a3a3a;
    text-decoration: none;
}

.dark-overlay{

    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    background-color: #000;
    filter:alpha(opacity=50);
    -moz-opacity:0.5;
    -khtml-opacity: 0.5;
    opacity: 0.5;
    z-index: 2;

}

.main-content{
    -webkit-box-shadow: 0px 0px 1px 0px rgba(50, 50, 50, 0.2);
    -moz-box-shadow:    0px 0px 1px 0px rgba(50, 50, 50, 0.2);
    box-shadow:         0px 0px 1px 0px rgba(50, 50, 50, 0.2);

}

.tab-pane{
    padding-top:1em;
}

.offcanvas .sidebar-wrapper{
    position: fixed;
    top:3em;
    left:0;
    width: 16.66666667%; /* Size of .col-md-2 */
    max-height: 100vh;
    height: 100%;
    overflow:auto;
}

.sidebar-wrapper{
    opacity: 0.5;
    -webkit-transition: all .25s ease-out;
    -o-transition: all .25s ease-out;
    transition: all .25s ease-out;
}

.sidebar-wrapper:hover{
    opacity: 1;
}

body.active-sidebar{
    overflow:hidden;
}
/* OFF CANVAS MENU */

/* Make the wrapper 100% height, so the main-content div can also expand */
@media screen and (max-width: 992px) {

    /* Fix scrolling issue on mobile */
    html, body{
        height:auto;
    }

    .offcanvas, .dark-overlay{
        left:0;
        -webkit-transition: all .25s ease-out;
        -o-transition: all .25s ease-out;
        transition: all .25s ease-out;
    }

    .offcanvas-left.active{

    }
    .offcanvas-left.active .main-sidebar{
        left:0;
    }



    .offcanvas .main-sidebar {
        position: fixed;
        top: 0;
        padding-top:1em;
        left:0;
        width: 50%;
        max-height:100vh;
        height:100%;
        overflow-y:scroll;
        overflow-x:hidden;
        z-index:3;
        background:#F1F1F1;
    }

    .offcanvas .sidebar-wrapper{
        width:auto;
        overflow-x:hidden;
        padding:0;
        position:static;
        opacity: 1;
    }
    .offcanvas-left .main-sidebar{
        left:-50%;
    }

    .nav{
        padding-left:1em;
    }


}

